--- a/.github/workflows/run_pytest.yml
+++ b/.github/workflows/run_pytest.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          export DJANGO_SETTINGS_MODULE=animal_rescue_app.settings
 
       - name: Run Tests
         run: |
