--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 asgiref==3.5.2
 attrs==22.1.0
+coverage==7.3.2
 Django==4.1.1
+django-cors-headers==3.13.0
 djangorestframework==3.13.1
+exceptiongroup==1.2.0
 iniconfig==1.1.1
 packaging==21.3
 Pillow==9.2.0
 pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.9
-pytest==7.1.3
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-django==4.7.0
 pytest-jest==0.3.0
 pytest-metadata==2.0.2
 pytz==2022.2.1
