--- a/animal_rescue_frontend/package.json
+++ b/animal_rescue_frontend/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^4.6.2",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^8.9.0",
@@ -18,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "prettier --write \"src/**/*.js\""
   },
   "eslintConfig": {
     "extends": [
